[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scroll/ScrollMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scroll/Scroll.gd" type="Script" id=2]
[ext_resource path="res://Scroll/scroll.png" type="Texture" id=3]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.79902, 0.670455 ), -1.4979, -1.4979, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.00552486, 0.259668, 0.81768, 1 )
colors = PoolColorArray( 0.541176, 0.541176, 0.541176, 0, 0.541176, 0.541176, 0.541176, 1, 0.541176, 0.541176, 0.541176, 1, 0.541176, 0.541176, 0.541176, 0 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 49, 20 )

[sub_resource type="Animation" id=3]
resource_name = "Appear"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("CPUParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Scroll" type="Area2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
rotation = -3.14159
emitting = false
lifetime = 2.0
one_shot = true
scale_amount = 50.0
scale_amount_curve = SubResource( 2 )
color = Color( 0.847059, 0.847059, 0.847059, 1 )
color_ramp = SubResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.0
margin_top = -20.0
margin_right = 49.0
margin_bottom = 20.0
color = Color( 0.533333, 0.52549, 0.439216, 0.666667 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ScrollMenu" parent="." instance=ExtResource( 1 )]
position = Vector2( -404, -174 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Appear = SubResource( 3 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 9 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
hframes = 5

[connection signal="body_entered" from="." to="." method="_on_Scroll_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
